--- a/views/courses/show.ejs
+++ b/views/courses/show.ejs
@@ -54,20 +54,20 @@
 
                 <button id="" class="bg-white">
                   <a id="" class=" fs-5" style="color: rgb(88, 7, 139);"
-                    href="mailto:afrohouseofknowledge@gmail.com?"><i class="fa mx-2 p-3 fa-envelope-o" id=""
+                    href="mailto:afrohouseofknowledge@gmail.com?"><i class="fa mx-2 p-3 text-primary fa-envelope-o" id=""
                       aria-hidden="true"></i><span>afrohouseofknowledge@gmail.com</span></a>
                 </button>
 
                 <button id="" class="bg-white">
                   <a id="" class="fs-5" href=" tel: +22653344444">
-                    <i class="fa p-3 mx-2 fa-phone" aria-hidden="true"></i><span>+226 53344444</span>
+                    <i class="fa text-primary p-3 mx-2 fa-phone" aria-hidden="true"></i><span>+226 53344444</span>
                   </a>
                 </button>
 
                 <button id="" class="bg-white">
                   <a id="" class="text-success  fs-5" style="text-decoration: none;" href="https://wa.me/22653344444"
                     target="_blank">
-                    <i class="fa mx-2 p-3 fa-whatsapp" aria-hidden="true"></i>
+                    <i class="fa mx-2 text-success  p-3 fa-whatsapp" aria-hidden="true"></i>
                     <span class="">(226) 53344444</span></a>
                 </button>
 
@@ -110,7 +110,7 @@
         <a class="btn  instructor-social-icon btn-floating m-2" href="<%=instructor.whatsAppLink %>" role="button" id="m-whatsapp"
           target="_blank"><i class="fa fa-whatsapp"></i></a>
         <!-- Facebook -->
-        <a class="btn instructor-social-icon btn-floating m-2" href="<%= instructor.facebookLink %>" id="facebook"
+        <a   class="btn instructor-social-icon btn-floating m-2" href="<%= instructor.facebookLink %>" id="facebook"
           role="button" target="_blank"><i class="fab fa-facebook-f"></i></a>
         <!-- Twitter -->
         <a class="btn  instructor-social-icon btn-floating m-2" href="<%= instructor.twitterLink %>" id="twitter"
@@ -149,7 +149,7 @@
       <span class="underline-section"> Syllabus </span>
     </h3>
     <%- course.syllabusSummary %>
-    <p class="requirement text-primary">
+    <p class="requirement fs-5 text-primary">
       Cliquez sur le module pour en savoir plus
     </p>
     <div class="mb-5">
