--- a/views/layouts/courseBoilerplate.ejs
+++ b/views/layouts/courseBoilerplate.ejs
@@ -42,7 +42,7 @@
         tt = display_c();
       }
     </script>
-    <title>Afro house of Knowledge</title>
+    <title>Afro Language Lab</title>
   </head>
 
   <body onload="display_ct();">
