--- a/public/stylesheets/courses/showModule.css
+++ b/public/stylesheets/courses/showModule.css
@@ -7,7 +7,7 @@ body {
   margin: 0;
   padding: 0;
   background-color: #ffffffce;
-  font-family: "Roboto"serif;
+  font-family: "Roboto" serif;
 }
 
 .banner-wrapper {
@@ -105,7 +105,7 @@ body {
 }
 
 .module-title-wrapper {
-  background-color: rgb(65, 65, 65);
+  background-color: rgb(59, 70, 226);
   color: rgb(240, 234, 234);
   padding: 1.5rem 1rem;
   text-align: center;
@@ -117,23 +117,17 @@ body {
 
 .objectives {
   color: rgb(255, 255, 255);
-  background-color: rgb(114, 52, 133);
-  background: #aa46fc;
-  /* fallback for old browsers */
-  background: -webkit-linear-gradient(to right, #46c8fc, #10227ed5, #46e1fc);
-  /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to right, #46d8fc, #081e88b9, #46c8fc);
+  background-color: rgb(47, 9, 72);
+  
   /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 
-  margin-bottom: 2rem;
   padding: 1rem 2rem;
   text-align: center;
-  font-size: 1.5rem;
+  font-size: 1.2rem;
   transition: all 0.3s;
 }
 
 .objectives:hover {
-  font-size: 1.59rem;
   color: #ffffff;
 }
 
@@ -160,8 +154,11 @@ body {
 }
 
 .rok {
-  background-color: rgb(248, 119, 44);
-  padding: 1.5rem;
+  background: #4e54c8;  /* fallback for old browsers */
+background: -webkit-linear-gradient(to right, #8f94fb, #4e54c8);  /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(to right, #8f94fb, #4e54c8); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+  padding: 1.2rem;
   margin-top: 2rem;
   text-align: center;
   color: white;
@@ -170,6 +167,7 @@ body {
 
 .moreLink {
   font-size: 1.2rem;
+  padding: 1rem 2rem;
 }
 
 .underline-section {
