courses objectifs collapse

--- a/views/courses/course_modules/showModule.ejs
+++ b/views/courses/course_modules/showModule.ejs
@@ -80,22 +80,29 @@
             Ressources Utiles
           </a>
         </p>
-        <div class="collapse" id="objectif">
+        <!-- -->
+        <div class="collapse" id="objectif"  style="border: 2px solid black
+        ;">
           <div class="card card-body">
             <p>
               <%- courseModule.willLearnModule %>
             </p>
           </div>
         </div>
-        <div class="collapse my-3" id="moreEx">
-          <div class="card card-body">
+
+        <!-- -->
+        <div class="collapse my-3"  style="border: 2px solid rgb(4, 46, 160)
+        ; border-radius: 3px;" id="moreEx">
+          <div class="card-body">
             <p>
               <%- courseModule.explanationText %>
             </p>
           </div>
         </div>
 
-        <div class="collapse my-3" id="moreRes">
+        <!-- -->
+        <div class="collapse my-3"  style="border: 2px solid rgb(2, 87, 23)
+        ;" id="moreRes">
           <div class="card card-body">
             <p>
               <%- courseModule.moreDetails %>
