--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -19,7 +19,7 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Chivo:wght@400;700;900&family=Poppins:wght@600;700;800;900&display=swap"
     rel="stylesheet" />
-  <title>Afro house of Knowledge</title>
+  <title>Afro Language Lab</title>
 </head>
 
 <body class="">
