--- a/public/stylesheets/englishforAll/englishClubs/show.css
+++ b/public/stylesheets/englishforAll/englishClubs/show.css
@@ -745,8 +745,36 @@ customers-cards:before {
 }
 
 .readAloud-title{
-  font-size: 1rem;
   line-height: 3rem;
+}
+
+.exo-link{
+  font-size: 1.2rem;
+  transition: all 0.2s;
+}
+
+.exercise-wrapper{
+  transition: all 0.2s; 
+  border-radius: 5px;
+}
+
+.sp-card{
+  padding: 1rem 2rem 0;
+  box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
+  border-radius: 5px;
+  transition: all 0.2s;
+}
+
+.sp-card:hover{
+  border: 2px solid rgb(32, 3, 94);
+}
+
+.exo-link:hover .exercise-wrapper{
+  background-color: #007991;
+}
+
+.exo-link:hover{
+  color: white;
 }
 
 .song {
