--- a/views/emails/welcome_mail.ejs
+++ b/views/emails/welcome_mail.ejs
@@ -15,7 +15,7 @@
 													<a href="https://www.afrohk.com"
 														style="font-family:Helvetica,Arial,sans-serif;color:#0086bf"
 														target="_blank">
-														<img src="https://i.ibb.co/0DmwTHM/logo-afrohk-slogan.jpg"
+														<img src="https://res.cloudinary.com/afro-house-of-knowledge/image/upload/v1673380333/Afrohk/BurkEnglish%20Club/all_white_bg_yazebp.jpg"
 															alt="" style="display:block"
 															alt="afrohk_logo" width="600" height="400" />
 													</a>
