--- a/views/user/account_verified.ejs
+++ b/views/user/account_verified.ejs
@@ -25,7 +25,7 @@
   <div class="jumbotron">
     <h1 class="py-3" style="color: #333">
       Welcome to
-      <span class="afro ms-2">Afro</span><span class="hk">HK</span> family
+      <span class="afro ms-2">Afro Language Lab's</span> family
     </h1>
     <p class="lead text-success">
       <strong>Félicitations 🥳🎊 ! </strong> votre compte a été activé avec
